src/content/docs/sdk/unity/v5/features/preinstalled-ko.mdx
---
title: 사전 설치된 앱 활동 전송
description: 사전 설치된 앱에서 정보를 전송하도록 캠페인을 구성합니다.
slug: ko/sdk/unity/features/preinstalled
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v4: /ko/sdk/unity/v4/features/preinstalled
---

Adjust SDK를 사용하여 사용자의 기기에 사전 설치된 앱의 활동을 기록할 수 있습니다. 이 방법으로 캠페인을 통해 앱을 다운로드하지 않은 사용자의 정보를 전송할 수 있습니다.

`AdjustConfig` 인스턴스의 `IsPreinstallTrackingEnabled` 속성을 `bool` 값으로 설정하여 사전 설치 측정의 활성화 여부를 관리합니다.

```cs
AdjustConfig adjustConfig = new AdjustConfig("{YourAppToken}", AdjustEnvironment.Sandbox, true);
//...
adjustConfig.IsPreinstallTrackingEnabled = true;
//...
Adjust.InitSdk(adjustConfig);
```

Adjust SDK는 사전 설치된 앱 측정을 위해 5가지 메서드를 제공합니다.

-  [시스템 속성](#system-properties).
-  [콘텐츠 공급자](#content-provider).
-  [System Installer Receiver](#system-installer-receiver).
-  [World Readable Directory](#world-readable-directory).
-  [디폴트 링크 토큰](#default-link-token).

## 시스템 속성 {#system-properties}

OEM\(Original Equipment Manufacturer\) 파트너는 Android 시스템 속성을 활용하여 사전 설치된 앱을 어트리뷰션할 수 있습니다. OEM\(Original Equipment Manufacturer\)은 어트리뷰션 정보를 파일에 적고 해당 경로를 시스템 속성에 추가합니다. Adjust SDK는 설치를 어트리뷰션하기 위해 초기화 시 이 파일을 읽습니다.

## 콘텐츠 공급자 {#content-provider}

Content provider\(컨텐츠 제공자\) 메서드는 read\-only content provider\(읽기 전용 컨텐츠 제공자\)를 사용합니다. SDK는 content resolver를 사용하여 요청에서 사전 설치 정보를 수집합니다.

권한을 설정하려면 `AndroidManifest.xml` 파일에 다음을 추가합니다.

<CodeBlock title="<code>AndroidManifest.xml</code>을 실행합니다.">

```xml
<uses-permission android:name="com.adjust.preinstall.READ_PERMISSION"/>
```

</CodeBlock>

기기에 사전 설치된 앱 목록에 액세스하려면 `AndroidManifest.xml` 파일에 다음을 추가합니다.

<CodeBlock title="<code>AndroidManifest.xml</code>을 실행합니다.">

```xml
<queries>
   <intent>
       <action android:name="com.attribution.REFERRAL_PROVIDER"/>
   </intent>
</queries>

```

</CodeBlock>

## System Installer Receiver {#system-installer-receiver}

시스템 인스톨러 메서드는 브로드캐스트 리시버를 사용합니다. 시스템 인스톨러는 사전 설치 정보를 브로드캐스트합니다. Adjust SDK는 시스템 사전 설치 리퍼러 리시버를 사용하여 이 정보를 읽습니다.

리시버를 설정하려면 `AndroidManifest.xml` 파일에 다음을 추가합니다.

<CodeBlock title="<code>AndroidManifest.xml</code>을 실행합니다.">

```xml
<receiver android:name="com.adjust.sdk.AdjustPreinstallReferrerReceiver">
   <intent-filter>
      <action android:name="com.attribution.SYSTEM_INSTALLER_REFERRER" />
   </intent-filter>
</receiver>

```

</CodeBlock>

## World\-readable directory {#world-readable-directory}

사전 설치된 앱의 어트리뷰션 정보를 전세계에서 읽을 수 있는 디렉토리에 저장합니다. SDK는 설치 시 이 파일에서 정보를 읽고 사용자를 어트리뷰션합니다. 시스템의 암호화 프로토콜은 앱 데이터를 보호합니다.

Adjust SDK가 사전 설치 정보에 액세스할 수 있도록 이 정보가 저장된 파일 경로를 `PreinstallFilePath` 메서드로 전달합니다.

```cs
AdjustConfig adjustConfig = new AdjustConfig("{YourAppToken}", AdjustEnvironment.Sandbox, true);
//...
adjustConfig.PreinstallFilePath = "../EngagementFile.xml";
//...
Adjust.InitSdk(adjustConfig);
```

## 디폴트 링크 토큰 {#default-link-token}

디폴트 링크 토큰을 설정하면 모든 사전 설치를 미리 정의된 Adjust 링크에 어트리뷰션할 수 있습니다. Adjust는 어트리뷰션 소스가 변경될 때까지 이 토큰에 대한 모든 정보를 기록합니다. 설정 방법:

1. [Campaign Lab에서 새로운 캠페인 링크를 생성합니다](https://help.adjust.com/ko/article/links).

   ```http
   https://app.adjust.com/{token}
   ```

2. 이 토큰을 복사한 뒤 앱 델리게이트 파일에 있는 `AdjustConfig` 인스턴스의 `DefaultTracker` 속성에 할당합니다.

   ```cs
   AdjustConfig adjustConfig = new AdjustConfig("{YourAppToken}", AdjustEnvironment.Sandbox);
   //...
   adjustConfig.DefaultTracker = "{TrackerToken}";
   //...
   Adjust.InitSdk(adjustConfig);
   ```

3. 앱을 빌드하고 실행합니다. 로깅이 활성화된 경우 로그에 다음과 같은 메시지가 표시됩니다.

   ```text
   Default tracker: 'abc123'.
   ```
